Corregir temario expandible y agregar nuevas páginas de cursos
- Solucionado problema de subtemas mal ubicados en página de paneles solares
- Agregada funcionalidad JavaScript para expandir/contraer módulos del temario
- Mejorado el CSS con indicadores visuales (flechas) para módulos clickeables
- Aumentada altura máxima de módulos expandidos (300px -> 500px)
- Corregido padding para mejor ubicación de contenido
- Agregadas páginas completas para todos los cursos:
  * curso-rcp.html - RCP y Primeros Auxilios
  * curso-proceso-penal.html - Proceso Penal
  * curso-promotor-salud.html - Promotor de Salud
- Implementadas imágenes de fondo con gradientes en las tarjetas de curso
- Añadidos archivos de respaldo y utilidades (demo-colores.html, mobile-fixes.css)
- Mejorada la experiencia de usuario con transiciones suaves y comportamiento tipo acordeón

--- a/index.html
+++ b/index.html
@@ -68,77 +68,107 @@
         <div class="container">
             <h2 class="section-title">Cursos Disponibles</h2>
             <div class="cursos-grid">
-                <div class="curso-card">
-                    <div class="card-icon">
+                <a href="cursos.html" class="curso-card curso-card-clickable">
+                    <div class="curso-image">
                         <i class="fas fa-heartbeat"></i>
+                        <div class="curso-overlay">
+                            <span>Ver más cursos</span>
+                        </div>
                     </div>
-                    <h3>RCP y Primeros Auxilios</h3>
-                    <p>Curso de Reanimación Cardiopulmonar y Primeros Auxilios. Más de 100 alumnos capacitados.</p>
-                    <div class="card-info">
-                        <span class="card-location">SUM Pabellón 16B</span>
-                        <span class="card-status">Activo</span>
+                    <div class="curso-content">
+                        <h3>RCP y Primeros Auxilios</h3>
+                        <p>Reanimación Cardiopulmonar y Primeros Auxilios</p>
+                        <div class="card-info">
+                            <span class="card-location">SUM Pabellón 16B</span>
+                            <span class="card-status">Activo</span>
+                        </div>
                     </div>
-                </div>
+                </a>
 
-                <div class="curso-card">
-                    <div class="card-icon">
+                <a href="cursos.html" class="curso-card curso-card-clickable">
+                    <div class="curso-image solar-bg">
                         <i class="fas fa-solar-panel"></i>
+                        <div class="curso-overlay">
+                            <span>Ver más cursos</span>
+                        </div>
                     </div>
-                    <h3>Paneles Solares</h3>
-                    <p>Instalación y mantenimiento de paneles solares, electricidad básica, termos solares y energía eólica.</p>
-                    <div class="card-info">
-                        <span class="card-location">Miércoles</span>
-                        <span class="card-status">Activo</span>
+                    <div class="curso-content">
+                        <h3>Paneles Solares</h3>
+                        <p>Instalación y mantenimiento de energía solar</p>
+                        <div class="card-info">
+                            <span class="card-location">Miércoles</span>
+                            <span class="card-status">Activo</span>
+                        </div>
                     </div>
-                </div>
+                </a>
 
-                <div class="curso-card">
-                    <div class="card-icon">
+                <a href="cursos.html" class="curso-card curso-card-clickable">
+                    <div class="curso-image health-bg">
                         <i class="fas fa-user-md"></i>
+                        <div class="curso-overlay">
+                            <span>Ver más cursos</span>
+                        </div>
                     </div>
-                    <h3>Promotor de Salud</h3>
-                    <p>Curso para promover el bienestar de la salud de las personas, dictado por personal especializado.</p>
-                    <div class="card-info">
-                        <span class="card-location">Biblioteca 16B</span>
-                        <span class="card-status">En curso</span>
+                    <div class="curso-content">
+                        <h3>Promotor de Salud</h3>
+                        <p>Promoción del bienestar y la salud</p>
+                        <div class="card-info">
+                            <span class="card-location">Biblioteca 16B</span>
+                            <span class="card-status">En curso</span>
+                        </div>
                     </div>
-                </div>
+                </a>
 
-                <div class="curso-card">
-                    <div class="card-icon">
+                <a href="cursos.html" class="curso-card curso-card-clickable">
+                    <div class="curso-image legal-bg">
                         <i class="fas fa-balance-scale"></i>
+                        <div class="curso-overlay">
+                            <span>Ver más cursos</span>
+                        </div>
                     </div>
-                    <h3>Proceso Penal</h3>
-                    <p>Introducción al Proceso Penal y su incidencia en la ejecución de la pena en la Provincia de Buenos Aires.</p>
-                    <div class="card-info">
-                        <span class="card-location">Aula principal</span>
-                        <span class="card-status">Inscripciones abiertas</span>
+                    <div class="curso-content">
+                        <h3>Proceso Penal</h3>
+                        <p>Introducción al Proceso Penal y la pena</p>
+                        <div class="card-info">
+                            <span class="card-location">Aula principal</span>
+                            <span class="card-status">Inscripciones abiertas</span>
+                        </div>
                     </div>
-                </div>
+                </a>
 
-                <div class="curso-card">
-                    <div class="card-icon">
+                <a href="cursos.html" class="curso-card curso-card-clickable">
+                    <div class="curso-image gender-bg">
                         <i class="fas fa-users"></i>
+                        <div class="curso-overlay">
+                            <span>Ver más cursos</span>
+                        </div>
                     </div>
-                    <h3>Género y Ley Micaela</h3>
-                    <p>Abordaje de violencias de género y capacitación en Ley Micaela.</p>
-                    <div class="card-info">
-                        <span class="card-location">Desde abril</span>
-                        <span class="card-status">Activo</span>
+                    <div class="curso-content">
+                        <h3>Género y Ley Micaela</h3>
+                        <p>Violencias de género y Ley Micaela</p>
+                        <div class="card-info">
+                            <span class="card-location">Desde abril</span>
+                            <span class="card-status">Activo</span>
+                        </div>
                     </div>
-                </div>
+                </a>
 
-                <div class="curso-card">
-                    <div class="card-icon">
+                <a href="cursos.html" class="curso-card curso-card-clickable">
+                    <div class="curso-image prevention-bg">
                         <i class="fas fa-shield-alt"></i>
+                        <div class="curso-overlay">
+                            <span>Ver más cursos</span>
+                        </div>
                     </div>
-                    <h3>Prevención Consumos</h3>
-                    <p>Charlas sobre prevención de consumos problemáticos y promoción de hábitos saludables.</p>
-                    <div class="card-info">
-                        <span class="card-location">Salud Penitenciaria</span>
-                        <span class="card-status">Disponible</span>
+                    <div class="curso-content">
+                        <h3>Prevención Consumos</h3>
+                        <p>Prevención de consumos problemáticos</p>
+                        <div class="card-info">
+                            <span class="card-location">Salud Penitenciaria</span>
+                            <span class="card-status">Disponible</span>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </section>
