--- a/cursos.html
+++ b/cursos.html
@@ -119,7 +119,7 @@
                         </div>
                     </div>
                     <div class="card-actions">
-                        <a href="#" class="btn btn-outline">Ver detalles</a>
+                        <a href="./curso-paneles-solares.html" class="btn btn-outline">Ver detalles</a>
                         <a href="#inscripcion" class="btn btn-primary">Inscribirse</a>
                     </div>
                 </div>
