Corrección CRÍTICA: Eliminación completa de enlaces a páginas eliminadas en index.html - Funcionalidad móvil corregida

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                     ofreciendo cursos, capacitaciones y actividades que contribuyen al desarrollo personal y profesional.
                 </p>
                 <div class="hero-buttons">
-                    <a href="cursos.html" class="btn btn-primary">Ver Cursos</a>
-                    <a href="noticias.html" class="btn btn-secondary">Últimas Noticias</a>
+                    <a href="#cursos" class="btn btn-primary">Ver Cursos</a>
+                    <a href="#noticias" class="btn btn-secondary">Últimas Noticias</a>
                 </div>
             </div>
         </div>
@@ -62,11 +62,11 @@
         <div class="container">
             <h2 class="section-title">Cursos Disponibles</h2>
             <div class="cursos-grid">
-                <a href="cursos.html" class="curso-card curso-card-clickable">
+                <a href="curso-rcp.html" class="curso-card curso-card-clickable">
                     <div class="curso-image">
                         <i class="fas fa-heartbeat"></i>
                         <div class="curso-overlay">
-                            <span>Ver más cursos</span>
+                            <span>Ver curso completo</span>
                         </div>
                     </div>
                     <div class="curso-content">
@@ -79,11 +79,11 @@
                     </div>
                 </a>
 
-                <a href="cursos.html" class="curso-card curso-card-clickable">
+                <a href="curso-paneles-solares.html" class="curso-card curso-card-clickable">
                     <div class="curso-image solar-bg">
                         <i class="fas fa-solar-panel"></i>
                         <div class="curso-overlay">
-                            <span>Ver más cursos</span>
+                            <span>Ver curso completo</span>
                         </div>
                     </div>
                     <div class="curso-content">
@@ -96,11 +96,11 @@
                     </div>
                 </a>
 
-                <a href="cursos.html" class="curso-card curso-card-clickable">
+                <a href="curso-promotor-salud.html" class="curso-card curso-card-clickable">
                     <div class="curso-image health-bg">
                         <i class="fas fa-user-md"></i>
                         <div class="curso-overlay">
-                            <span>Ver más cursos</span>
+                            <span>Ver curso completo</span>
                         </div>
                     </div>
                     <div class="curso-content">
@@ -113,11 +113,11 @@
                     </div>
                 </a>
 
-                <a href="cursos.html" class="curso-card curso-card-clickable">
+                <a href="curso-proceso-penal.html" class="curso-card curso-card-clickable">
                     <div class="curso-image legal-bg">
                         <i class="fas fa-balance-scale"></i>
                         <div class="curso-overlay">
-                            <span>Ver más cursos</span>
+                            <span>Ver curso completo</span>
                         </div>
                     </div>
                     <div class="curso-content">
@@ -130,11 +130,11 @@
                     </div>
                 </a>
 
-                <a href="cursos.html" class="curso-card curso-card-clickable">
+                <a href="#contacto" class="curso-card curso-card-clickable">
                     <div class="curso-image gender-bg">
                         <i class="fas fa-users"></i>
                         <div class="curso-overlay">
-                            <span>Ver más cursos</span>
+                            <span>Más información</span>
                         </div>
                     </div>
                     <div class="curso-content">
@@ -147,11 +147,11 @@
                     </div>
                 </a>
 
-                <a href="cursos.html" class="curso-card curso-card-clickable">
+                <a href="#contacto" class="curso-card curso-card-clickable">
                     <div class="curso-image prevention-bg">
                         <i class="fas fa-shield-alt"></i>
                         <div class="curso-overlay">
-                            <span>Ver más cursos</span>
+                            <span>Más información</span>
                         </div>
                     </div>
                     <div class="curso-content">
@@ -249,7 +249,7 @@
                         <i class="fas fa-user-graduate"></i>
                     </div>
                     <h3>Inscripciones</h3>
-                    <p>Acércate a la Oficina de Judiciales</p>                        <a href="cursos.html" class="recurso-link">
+                    <p>Acércate a la Oficina de Judiciales</p>                        <a href="#contacto" class="recurso-link">
                             Más información <i class="fas fa-arrow-right"></i>
                         </a>
                 </div>
@@ -325,9 +325,8 @@
                     <h4>Enlaces Rápidos</h4>
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
-                        <li><a href="cursos.html">Cursos</a></li>
-                        <li><a href="noticias.html">Noticias</a></li>
                         <li><a href="recursos.html">Recursos</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
