CACHE BUST: Forzar actualización - Eliminar caché de páginas eliminadas

--- a/index.html
+++ b/index.html
@@ -345,4 +345,4 @@
 
     <script src="script.js"></script>
 </body>
-</html>
+</html><- Reglas específicas para .noticias-page y Cache bust: Fri Jul 11 16:58:27 -03 2025 -->
