SOLUCIÓN DEFINITIVA: Eliminación de TODAS las referencias a páginas problemáticas en todos los archivos

--- a/curso-paneles-solares.html
+++ b/curso-paneles-solares.html
@@ -627,9 +627,9 @@
                     <h4>Enlaces Útiles</h4>
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
-                        <li><a href="cursos.html">Todos los Cursos</a></li>
-                        <li><a href="noticias.html">Noticias</a></li>
+                        <li><a href="index.html#cursos">Todos los Cursos</a></li>
                         <li><a href="recursos.html">Recursos</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </div>
@@ -879,7 +879,7 @@
                         </div>
                         <div class="course-actions">
                             <a href="#inscripcion" class="btn btn-primary">Inscribirse Ahora</a>
-                            <a href="cursos.html" class="btn btn-outline">Ver Todos los Cursos</a>
+                            <a href="index.html#cursos" class="btn btn-outline">Ver Todos los Cursos</a>
                         </div>
                     </div>
                 </div>
@@ -1006,9 +1006,8 @@
                     <h4>Enlaces Rápidos</h4>
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
-                        <li><a href="cursos.html">Cursos</a></li>
-                        <li><a href="noticias.html">Noticias</a></li>
                         <li><a href="recursos.html">Recursos</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
