--- a/curso-promotor-salud.html
+++ b/curso-promotor-salud.html
@@ -45,7 +45,6 @@
             <div class="course-hero-content">
                 <div class="course-breadcrumb">
                     <a href="index.html">Inicio</a> > 
-                    <a href="cursos.html">Cursos</a> > 
                     <span>Promotor de Salud</span>
                 </div>
                 <div class="course-icon">
@@ -312,9 +311,8 @@
                     <h4>Enlaces Rápidos</h4>
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
-                        <li><a href="cursos.html">Cursos</a></li>
-                        <li><a href="noticias.html">Noticias</a></li>
                         <li><a href="recursos.html">Recursos</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
