--- a/contacto.html
+++ b/contacto.html
@@ -334,9 +334,8 @@
                     <h4>Enlaces Rápidos</h4>
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
-                        <li><a href="cursos.html">Cursos</a></li>
-                        <li><a href="noticias.html">Noticias</a></li>
                         <li><a href="recursos.html">Recursos</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
