--- a/curso-proceso-penal.html
+++ b/curso-proceso-penal.html
@@ -44,7 +44,7 @@
         <div class="container">
             <div class="course-hero-content">
                 <div class="course-breadcrumb">
-                    <a href="index.html">Inicio</a> > <a href="cursos.html">Cursos</a> > <span>Proceso Penal</span>
+                    <a href="index.html">Inicio</a> > <span>Proceso Penal</span>
                 </div>
                 <div class="course-header">
                     <div class="course-icon">
@@ -181,7 +181,7 @@
                         </div>
                         <div class="course-actions">
                             <a href="#inscripcion" class="btn btn-primary">Inscribirse Ahora</a>
-                            <a href="cursos.html" class="btn btn-outline">Ver Todos los Cursos</a>
+                            <a href="index.html#cursos" class="btn btn-outline">Ver Todos los Cursos</a>
                         </div>
                     </div>
                 </div>
@@ -308,9 +308,8 @@
                     <h4>Enlaces Rápidos</h4>
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
-                        <li><a href="cursos.html">Cursos</a></li>
-                        <li><a href="noticias.html">Noticias</a></li>
                         <li><a href="recursos.html">Recursos</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
