--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link active">Inicio</a>
+                        <a href="#inicio" class="nav-link active">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a href="recursos.html" class="nav-link">Recursos</a>
+                        <a href="#cursos" class="nav-link">Cursos</a>
                     </li>
                     <li class="nav-item">
-                        <a href="contacto.html" class="nav-link">Contacto</a>
+                        <a href="#contacto" class="nav-link">Contacto</a>
                     </li>
                 </ul>
                 <div class="nav-toggle" id="mobile-menu">
@@ -62,11 +62,11 @@
         <div class="container">
             <h2 class="section-title">Cursos Disponibles</h2>
             <div class="cursos-grid">
-                <a href="curso-rcp.html" class="curso-card curso-card-clickable">
+                <a href="#contacto" class="curso-card curso-card-clickable">
                     <div class="curso-image">
                         <i class="fas fa-heartbeat"></i>
                         <div class="curso-overlay">
-                            <span>Ver curso completo</span>
+                            <span>Más información</span>
                         </div>
                     </div>
                     <div class="curso-content">
@@ -79,11 +79,11 @@
                     </div>
                 </a>
 
-                <a href="curso-paneles-solares.html" class="curso-card curso-card-clickable">
+                <a href="#contacto" class="curso-card curso-card-clickable">
                     <div class="curso-image solar-bg">
                         <i class="fas fa-solar-panel"></i>
                         <div class="curso-overlay">
-                            <span>Ver curso completo</span>
+                            <span>Más información</span>
                         </div>
                     </div>
                     <div class="curso-content">
@@ -96,11 +96,11 @@
                     </div>
                 </a>
 
-                <a href="curso-promotor-salud.html" class="curso-card curso-card-clickable">
+                <a href="#contacto" class="curso-card curso-card-clickable">
                     <div class="curso-image health-bg">
                         <i class="fas fa-user-md"></i>
                         <div class="curso-overlay">
-                            <span>Ver curso completo</span>
+                            <span>Más información</span>
                         </div>
                     </div>
                     <div class="curso-content">
@@ -113,11 +113,11 @@
                     </div>
                 </a>
 
-                <a href="curso-proceso-penal.html" class="curso-card curso-card-clickable">
+                <a href="#contacto" class="curso-card curso-card-clickable">
                     <div class="curso-image legal-bg">
                         <i class="fas fa-balance-scale"></i>
                         <div class="curso-overlay">
-                            <span>Ver curso completo</span>
+                            <span>Más información</span>
                         </div>
                     </div>
                     <div class="curso-content">
@@ -324,13 +324,14 @@
                 <div class="footer-section">
                     <h4>Enlaces Rápidos</h4>
                     <ul>
-                        <li><a href="index.html">Inicio</a></li>
-                        <li><a href="recursos.html">Recursos</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
+                        <li><a href="#inicio">Inicio</a></li>
+                        <li><a href="#cursos">Cursos</a></li>
+                        <li><a href="#noticias">Noticias</a></li>
+                        <li><a href="#contacto">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
-                    <h4>Recursos</h4>
+                    <h4>Recursos Externos</h4>
                     <ul>
                         <li><a href="https://www.infoleg.gob.ar/" target="_blank">Infoleg</a></li>
                         <li><a href="http://www.enciclopedia-juridica.com/" target="_blank">Enciclopedia Jurídica</a></li>
@@ -345,4 +346,4 @@
 
     <script src="script.js"></script>
 </body>
-</html><- Reglas específicas para .noticias-page y Cache bust: Fri Jul 11 16:58:27 -03 2025 -->
+</html>
